# black-skies

./: .env.example  .eslintignore  .eslintrc.cjs  .flake8  .gitattributes  .gitignore  .gitignore.bak  .markdownlint.json  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE.md  RUNBOOK.md  SECURITY.md  TempProjectHomeSnippet  aider.conf.yml  backend.ps1  constraints.txt  diffpixels.py  diffregion.py  diffscript.py  diffstats.py  front.ps1  list_trace.py  package.json  phase_log.md  pnpm-workspace.yaml  pyproject.toml  pytest.ini  requirements.win.dev.txt  scan_trace.py  sitecustomize.py  start-codex.ps1  temp_readme_patch.txt  tmp_diff_info.py  tmp_image_info.py  tmp_patch.js  (+2 more)
.github/: pull_request_template.md
app/: index.html  (+6 more)
services/: README.md  __init__.py.bak  pyproject.toml  requirements-dev.txt
services/blackskies/: __init__.py
services/src/blackskies/: __init__.py
services/src/blackskies/data/: __init__.py
services/src/blackskies/data/eval_tasks/: critique_scene_001.yaml  critique_scene_003.yaml  critique_scene_004.yaml  critique_scene_008.yaml  critique_scene_010.yaml  critique_scene_015.yaml  critique_scene_016.yaml  critique_scene_019.yaml  critique_scene_020.yaml  critique_scene_review.yaml  draft_scene_004.yaml  draft_scene_006.yaml  draft_scene_008.yaml  draft_scene_009.yaml  draft_scene_012.yaml  draft_scene_013.yaml  draft_scene_014.yaml  draft_scene_016.yaml  draft_scene_018.yaml  draft_scene_generation.yaml  wizard_outline_002.yaml  wizard_outline_006.yaml  wizard_outline_010.yaml  wizard_outline_011.yaml  wizard_outline_013.yaml  wizard_outline_014.yaml  wizard_outline_016.yaml  wizard_outline_018.yaml  wizard_outline_020.yaml  wizard_outline_baseline.yaml
services/src/blackskies/services/: __init__.py  __main__.py  analytics_stub.py  analytics_stub.py.bak  analytics_stub.py.bak2  analytics_stub.py.bak3  app.py  backup_service.py  backup_verifier.py  budgeting.py  cache.py  config.py  constants.py  critique.py  critique_analyzer.py  diagnostics.py  diff_engine.py  draft_service.py  draft_synthesizer.py  e2e_mode.py  export.py  export_service.py  exports.py  feature_flags.py  get_logger.py.bak  heuristics.py  history.py  http.py  integrity.py  io.py  logging_config.py  long_form.py  metrics.py  middleware.py  middleware.py.bak  model_adapters.py  model_router.py  model_routing.py  models.py  outline_builder.py  (+21 more)
services/src/blackskies/services/agents/: __init__.py  base.py
services/src/blackskies/services/analytics/: __init__.py  cache.py  runtime.py  service.py  text_utils.py
services/src/blackskies/services/eval/: dataset.py  report.py
services/src/blackskies/services/fixtures/: __init__.py  draft_critique.json  draft_generate.json  draft_rewrite.json  outline_build.json
services/src/blackskies/services/models/: __init__.py  _project_id.py  accept.py  critique.py  draft.py  draft_critique_response.py  draft_export_response.py  draft_generate_response.py  draft_preflight_response.py  draft_recovery_response.py  draft_response_shared.py  draft_rewrite_response.py  errors.py  legacy.py  long_form.py  outline.py  outline_response.py  phase4_loop.py  project.py  rewrite.py  rubric.py  wizard.py
services/src/blackskies/services/operations/: __init__.py  budget_service.py  draft_accept.py  draft_export.py  draft_generation.py  long_form_execution.py  recovery.py  wizard_snapshot.py
services/src/blackskies/services/persistence/: __init__.py  atomic.py  draft.py  os.py  outline.py  snapshot.py
services/src/blackskies/services/plugins/: __init__.py  host.py  registry.py  runner.py
services/src/blackskies/services/routers/: __init__.py  analytics.py  analytics.py.bak  analytics.py.tmp  api_v1.py  backup_verifier.py  backups.py  dependencies.py  draft.py  export.py  health.py  long_form.py  outline.py  phase4.py  recovery.py  restore.py  shared.py  snapshots.py
services/src/blackskies/services/tools/: __init__.py  base.py  file_store.py  registry.py  resilience.py  safety.py  search.py  summarizer.py  template_renderer.py
services/src/blackskies/services/utils/: __init__.py  paths.py  yaml.py
services/tests/: conftest.py  test_adapter_routing_metadata.py  test_analytics_endpoints.py  test_analytics_endpoints.py.bak  test_analytics_metrics.py  test_analytics_metrics.py.bak  test_analytics_no_invalid_endpoints.py  test_api_gateway.py  test_app.py  test_async_concurrency.py  test_backup_snapshot_regressions.py  test_backup_snapshot_regressions.py.bak  test_backup_verifier_report.py  test_backups.py  test_end_to_end_gui_flow.py  test_export_consistency.py  test_export_endpoints.py  test_gui_bridge_contracts.py  test_heuristics_pipeline.py  test_integrity_validator.py  test_long_form_endpoint.py  test_phase4_loop.py  test_plugin_sandbox.py  test_rewrite.py  test_scene_draft_consistency.py  test_service_process.py  test_snapshot_endpoints.py  test_text_utils.py
services/tests/contracts/: draft_critique.json  draft_preflight_ok.json  outline_build.json
services/tests/unit/: test_agent_base.py  test_agent_orchestrator.py  test_agents.py  test_agents_backoff.py  test_analytics.py  test_analytics_metrics.py  test_analytics_service.py  test_backup_verifier.py  test_body_limit_middleware.py  test_budget_loader.py  test_budget_properties.py  test_budgeting_normalize.py  test_config.py  test_critique_adapter_validation.py  test_diagnostics.py  test_diff_engine.py  test_draft_generation_adapter.py  test_draft_generation_experiment.py  test_draft_persistence_durability.py  test_export_meta_header.py  test_http_errors.py  test_logging_redaction.py  test_long_form.py  test_long_form_execution.py  test_markdown_search_tool.py  test_model_adapters.py  test_model_router.py  test_models_draft.py  test_models_project.py  test_persistence.py  test_plugin_registry.py  test_plugin_runner.py  test_project_export_service.py  test_prompt_pipeline.py  test_recovery_tracker.py  test_request_models.py  test_resilience.py  test_restore_service.py  test_run_policy.py  test_scene_memory.py  (+4 more)
services/tools/: check_startup.py
(+1402 files in other folders)
