[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "black-skies"
version = "1.0.0-rc1"
description = "Lightweight FastAPI surface and orchestration tools for the Black Skies platform."
authors = [
  { name = "Black Skies Team", email = "dev@black-skies.dev" },
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["writing", "fastapi", "llm", "black-skies"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi>=0.118.3,<0.119",
  "starlette>=0.48.0,<0.49",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "pyyaml>=6.0,<7.0",
  "uvicorn[standard]>=0.29.0,<0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-cov>=7.0.0",
  "pytest-rerunfailures>=16.0.0",
  "flake8>=7.0.0",
  "mypy>=1.11.0,<1.12",
  "black>=25.0.0",
  "httpx>=0.27.2,<0.28",
]

[tool.setuptools.package-data]
"blackskies.services" = ["py.typed", "fixtures/*.json"]
"blackskies.data" = ["eval_tasks/*.yaml"]

[tool.setuptools.packages.find]
where = ["services/src"]
include = ["blackskies*"]
exclude = ["tests", "vendor", "data"]

[tool.black]
line-length = 100

[tool.coverage.run]
branch = true
source = ["blackskies.services"]

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.mypy]
python_version = "3.11"
mypy_path = ["services/src"]
packages = ["blackskies.services"]
namespace_packages = true
warn_unused_configs = true
