[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "blackskies-services"
version = "0.1.0"
description = "FastAPI service layer for the Black Skies platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<0.111",
  "uvicorn[standard]>=0.29,<0.30",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "httpx>=0.27,<0.28"
]

[project.scripts]
blackskies-services = "blackskies.services.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/blackskies"]
