[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "blackskies-services"
version = "0.1.0"
description = "FastAPI service layer for the Black Skies platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.118.3,<0.119",
  "starlette>=0.48.0,<0.49",
  "uvicorn[standard]>=0.29.0,<0.30",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "pyyaml>=6.0,<7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "httpx>=0.27.2,<0.28"
]

[project.scripts]
blackskies-services = "blackskies.services.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/blackskies"]

[tool.pytest.ini_options]
addopts = [
  "--ignore=.venv",
  "--ignore=vendor",
  "--ignore=node_modules",
  "--ignore=build",
  "--ignore=dist"
]
norecursedirs = [
  ".venv",
  "vendor",
  "node_modules",
  "build",
  "dist",
  ".mypy_cache",
  ".pytest_cache"
]
markers = [
  "contract: Contract-level checks validating external service expectations."
]

[tool.black]
line-length = 100
target-version = ["py311"]
# This is a BASIC string, so we escape the backslash.
include = "\\.pyi?$"

# Use a LITERAL triple-quoted string so backslashes in regex are NOT escapes.
exclude = '''
/(
  \\.git
  | \\.venv
  | build
  | dist
  | node_modules
  | vendor
  | __pycache__
  | .*\\.egg-info
)/
'''

# Optional: keep custom paths OUTSIDE the regex block.
[tool.blackskies]
some_path = "C:/Dev/black-skies/services/whatever"
